--- a/src/components/YearStatistic/YearStatistic.module.css
+++ b/src/components/YearStatistic/YearStatistic.module.css
@@ -1,15 +1,33 @@
 .wrap{
-    max-width: 740px;
+    max-width: 640px;
     max-height: 350px;
     padding: 25px 20px;
-    background-color: aquamarine;
+    background-color: rgb(223, 223, 223);
     border-radius: 10px;
 }
 
 .header{
     display: flex;
-    justify-content: space-between;
+    gap: 25px;
+    align-items: center;
 }
+
+select {
+    border: 1px solid #E5E5E5;
+    width: 316px;
+    height: 36px;
+
+    padding: 7px 40px 7px 12px;
+    width: 100%;
+    border: 1px solid #E8EAED;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 0 1px 3px -2px #9098A9;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+    transition: all 150ms ease;
+  }
 
 .header h1{
     font-family: 'GT Eesti Pro Display';
@@ -22,4 +40,7 @@
 
 .select{
     max-width: 315px;
+}
+canvas{
+    height: 240px !important;
 }
