Добавлен нормалайз, исправлены небольшие ошибки и стили

--- a/src/components/AsideBar/Navigation/Navigation.module.css
+++ b/src/components/AsideBar/Navigation/Navigation.module.css
@@ -18,3 +18,10 @@
     font-size: 28px;
 }
 
+.link{
+    text-decoration: none;
+    font-size: 28px;
+    line-height: 38px;
+    letter-spacing: 0.1em;
+    color: #000000;
+}
