Добавлены шрифты и изменены стили компонентов

--- a/src/components/AsideBar/Navigation/Navigation.module.css
+++ b/src/components/AsideBar/Navigation/Navigation.module.css
@@ -19,6 +19,8 @@
 }
 
 .link{
+    font-family: 'GT Eesti Pro Display Light';
+    font-weight: 300;
     text-decoration: none;
     font-size: 28px;
     line-height: 38px;
