--- a/src/components/ChartsPage/ChartsPage.module.css
+++ b/src/components/ChartsPage/ChartsPage.module.css
@@ -1,5 +1,6 @@
 .chartsPage{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: max-content;
     background-color:  #EFEFEF;
 }
