--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -30,6 +30,11 @@
     border: none;
     background: #DAEF14;
     border-radius: 3px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background: rgb(190, 209, 20)
 }
 
 .button span{
