--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,6 +31,7 @@
     background: #DAEF14;
     border-radius: 3px;
     cursor: pointer;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2)
 }
 
 .button:hover{
