--- a/src/components/AsideBar/Navigation/Navigation.module.css
+++ b/src/components/AsideBar/Navigation/Navigation.module.css
@@ -3,27 +3,39 @@
 }
 
 .ul{
+    width: 100%;
     margin: 0;
     padding: 0;
-    display: grid;
-    justify-content: center;
 }
 
 .ul li:not(:last-child){
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .li{
+    display: flex;
+    width: 100%;
+    height: 65px;
     list-style: none;
     font-size: 28px;
 }
 
 .link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     font-family: 'GT Eesti Pro Display Light';
-    font-weight: 300;
     text-decoration: none;
     font-size: 28px;
     line-height: 38px;
     letter-spacing: 0.1em;
     color: #000000;
+}
+
+.active{
+    background: #EFEFEF;
+    transition-property: background;
+    transition-duration: .2s;
 }
