--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,34 @@
 .header{
+    padding-bottom: 5px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
     
+    font-family: 'GT Eesti Pro Display Light';
+    font-size: 32px;
+    letter-spacing: 0.1em;
+
+    border-bottom: 1px solid #C0C0C0;
+}
+
+.title{
+    display: flex;
+    align-items: center;
+}
+
+.button{
+    padding: 10px 40px;
+    font-family: 'GT Eesti Pro Display Light';
+    font-size: 32px;
+    color: #DAEF14;
+    background-color: rgb(132, 94, 204);
+    filter: drop-shadow(10px 16px 27px rgba(0, 0, 0, 0.1));
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: #9D7DE0;
+    transition: all .2s;
 }
