--- a/src/components/AsideBar/Navigation/Navigation.module.css
+++ b/src/components/AsideBar/Navigation/Navigation.module.css
@@ -3,30 +3,26 @@
 }
 
 .ul{
-    display: block;
+    width: 100%;
     margin: 0;
     padding: 0;
-    justify-content: center;
 }
-
-/* .ul li:not(:last-child){
-    margin-bottom: 20px;
-} */
 
 .li{
     display: flex;
-    justify-content: center;
     width: 100%;
+    height: 65px;
     list-style: none;
-    padding: 10px 0px 10px 0px;
+    padding: 10px 0;
     font-size: 28px;
 }
 
-.li:hover{
-    background-color: #dbdbdb;
-}
 
 .link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     font-family: 'GT Eesti Pro Display Light';
     font-weight: 300;
     text-decoration: none;
@@ -34,4 +30,10 @@
     line-height: 38px;
     letter-spacing: 0.1em;
     color: #000000;
+}
+
+.active {
+    background: #EFEFEF;
+    transition-property: background;
+    transition-duration: .2s;
 }
