--- a/src/components/BudgetAllocationStatistic/BudgetAllocationStatistic.module.css
+++ b/src/components/BudgetAllocationStatistic/BudgetAllocationStatistic.module.css
@@ -3,8 +3,8 @@
     font-family: 'GT Eesti Pro Display Light';
     font-style: normal;
     font-weight: 300;
-    max-width: 840px;
-    max-height: 550px;
+    max-width: 1400px;
+    height: max-content;
     padding: 25px 20px;
     background-color: white;
     border-radius: 10px;
