--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,6 +1,5 @@
-/* .form{
-    margin: 30px;
+.form{
+    padding: 20px 80px 20px 80px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
     gap: 20px;
-} */
+}
