--- a/src/components/YouthFromAllVoulunteers/YouthFormAllVolunteers.module.css
+++ b/src/components/YouthFromAllVoulunteers/YouthFormAllVolunteers.module.css
@@ -1,16 +1,28 @@
+.resourceStatistics{
+    display: flex;
+    justify-content: space-between;
+}
+
 .wrap {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     height: max-content;
     font-family: 'GT Eesti Pro Display Light';
-    max-width: 640px;
-    max-height: 350px;
+    max-width: 600px;
+    height: max-content;
     padding: 25px 20px;
     background-color: white;
     border-radius: 10px;
     filter: drop-shadow(10px 16px 27px rgba(0, 0, 0, 0.1));
+}
+
+.header{
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    /* justify-content: left; */
 }
 
 .wrap h1 {
@@ -20,5 +32,4 @@
     font-size: 24px;
     line-height: 28px;
     letter-spacing: 0.1em;
-    text-align: center;
 }
