--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,5 +1,8 @@
 .form{
-    padding: 20px 80px 20px 80px;
-    display: grid;
-    gap: 20px;
+    padding: 30px 50px 30px 30px;
+    /* display: grid;
+    gap: 20px; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
