--- a/src/components/AreasVolunteering/AreasVolunteering.module.css
+++ b/src/components/AreasVolunteering/AreasVolunteering.module.css
@@ -2,7 +2,7 @@
     font-family: 'GT Eesti Pro Display Light';
     font-style: normal;
     font-weight: 300;
-    max-width: 1400px;
+    width: 1460px;
     height: max-content;
     padding: 25px 20px;
     background-color: white;
