--- a/src/components/Goodness/Goodness.module.css
+++ b/src/components/Goodness/Goodness.module.css
@@ -1,3 +1,9 @@
 .goodness{
-    
+    padding: 30px 50px 30px 30px;
+    /* display: grid;
+    gap: 20px; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
 }
